border on input for high contrast mode, fix validation error

--- a/tbx/static_src/sass/components/_form.scss
+++ b/tbx/static_src/sass/components/_form.scss
@@ -17,7 +17,7 @@
 
     input[type='text'],
     input[type='password'] {
-        border-color: var(--color--border);
+        border: 1px solid var(--color--border);
         color: var(--color--background);
         font-weight: $weight--normal;
         padding: 10px $spacer-mini;
